Finalizado a opção de cadastro, adicionado a opção de login, recuperação de senha (com validação OTP e cookies) e criação do diretório da camada frontend
